fix : cursor visibility fixed

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  border-radius: 0 !important;
   cursor: none !important;
 }
 
@@ -150,3 +149,4 @@ body {
 .animate-scanline {
   animation: scanline 8s linear infinite;
 }
+
